[package]
name = "httparse"
version = "1.2.4"
authors = ["Sean McArthur <sean@seanmonstar.com>"]
license = "MIT/Apache-2.0"
description = "A tiny, safe, speedy, zero-copy HTTP/1.x parser."
repository = "https://github.com/seanmonstar/httparse"
documentation = "https://docs.rs/httparse"
keywords = ["http", "parser", "no_std"]
categories = ["network-programming", "no-std", "parser-implementations", "web-programming"]

[features]
default = ["std"]
std = []
nightly = []

[dev-dependencies.pico-sys]
branch = "master"
git = "https://github.com/kamyuentse/rust-pico-sys.git"

[profile.bench]
lto = true
debug = true
opt-level = 2
codegen-units = 1
